2010-06-25  Agustín Martín  <agustin.martin@hispalinux.es>

	* flyspell.el (flyspell-check-previous-highlighted-word): Make
	sure `flyspell-word' re-checks word after function run (Bug#6504).

	* ispell.el (ispell-init-process): Make sure ispell and default
	directories are expanded. (Bug#6143).

2010-06-24  Juri Linkov  <juri@jurta.org>

	* minibuffer.el (completions-format): Change default from nil to
	`horizontal'.  Remove `nil' value from :type.  Doc fix.  (Bug#6459)

2010-06-24  Juri Linkov  <juri@jurta.org>

	* vc/vc.el (vc-diff-internal): Set `revert-buffer-function'
	buffer-locally to lambda that re-runs the vc diff command.
	(Bug#6447)

2010-06-24  Chong Yidong  <cyd@stupidchicken.com>

	* kmacro.el (kmacro-call-macro): Don't issue hint message if the
	echo area is in use (Bug#3412).

2010-06-22  Glenn Morris  <rgm@gnu.org>

	* textmodes/texinfmt.el (texinfo-format-region)
	(texinfo-raise-lower-sections, texinfo-format-separate-node)
	(texinfo-itemize-item, texinfo-multitable-item, texinfo-alias)
	(texinfo-format-option, texinfo-noindent):
	Use line-beginning-position and line-end-position.

	* calc/calc-aent.el, calc/calc-ext.el, calc/calc-lang.el:
	* calc/calc-store.el, calc/calc-units.el, calc/calc.el:
	* calc/calccomp.el: Add explicit utf-8 coding cookies to files with
	utf-8 characters.

2010-06-21  Karl Fogel  <kfogel@red-bean.com>

	* simple.el (compose-mail): Fix doc string to refer to
	`compose-mail-user-agent-warnings', instead of to the
	nonexistent `compose-mail-check-user-agent'.

2010-06-21  Alan Mackenzie  <bug-cc-mode@gnu.org>

	Fix an indentation bug:

	* progmodes/cc-mode.el (c-common-init): Initialise c-new-BEG/END.
	(c-neutralize-syntax-in-and-mark-CPP): c-new-BEG/END: Take account
	of existing values.

	* progmodes/cc-engine.el (c-clear-<-pair-props-if-match-after)
	(c-clear->-pair-props-if-match-before): now return t when they've
	cleared properties, nil otherwise.
	(c-before-change-check-<>-operators): Set c-new-beg/end correctly